# botserver

./: .env.embedded  .env.example  .gitignore  .product  3rdparty.toml  API_CONVERSION_COMPLETE.md  APP_LAUNCHER_INTEGRATION.md  AUTO_INSTALL_COMPLETE.md  BUILD_STATUS.md  CHANGELOG.md  CODE_IMPLEMENTATION_ROADMAP.md  Cargo.toml  DEPENDENCY_FIX_PLAN.md  ENTERPRISE_INTEGRATION_COMPLETE.md  GAP_ANALYSIS.md  GENERAL_BOTS_7.0_COMPLETE.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  KB_AND_TOOL_SYSTEM.md  KB_SYSTEM_COMPLETE.md  LIBRARY_MIGRATION.md  LOGGING_PLAN.md  MEETING_FEATURES.md  MISSING_IMPLEMENTATIONS.md  PHASE1_COMPLETE.md  PROMPT.md  README-6.md  README.md  ROADMAP.md  SECURITY_AUDIT.md  SECURITY_TASKS.md  SEMANTIC_CACHE_IMPLEMENTATION.md  START_CODING_PROMPT.md  TASK.md  TASKS.md  TODO.md  TODO.tmp  WORKFLOW_PLAN.md  ZERO_WARNINGS_ACHIEVEMENT.md  (+20 more)
.cargo/: config.toml
.cline/: config.json
.forgejo/workflows/: botserver-bundle.yaml  botserver-v2.yaml  botserver.yaml
.zed/: debug.json
config/: directory_config.json
deploy/: README.md  deploy-ui.sh
deploy/kubernetes/: deployment.yaml  hpa.yaml
docs/: 05-INTEGRATION_STATUS.md  AUTHENTICATION_IMPLEMENTATION.md  AUTO_TASK_ARCHITECTURE.md  BASIC_UNIVERSAL_MESSAGING.md  BLOG_DOCUMENTATION_INTEGRATION.md  CHANGELOG.md  CHAPTER_REORGANIZATION.md  CLEANUP_COMPLETE.md  CLEANUP_WARNINGS.md  FINAL_FIXES_SUMMARY.md  FIX_WARNINGS_NOW.md  GAP_ANALYSIS.md  HEAR_VALIDATION_REFERENCE.md  IMPLEMENTATION_FINAL.md  INDEX.md  MIGRATION_INTEGRATION_SUMMARY.md  MINIMAL_UI_COMPLIANCE.md  NEW_KEYWORDS_REFERENCE.md  QUICK_START.md  README.md  REORGANIZATION_SUMMARY.md  SECURITY_FEATURES.md  SEMANTIC_CACHE.md  SET_SCHEDULE.md  SMB_DEPLOYMENT_GUIDE.md  STALWART_API_MAPPING.md  STRUCTURE.md  TEMPLATE_VARIABLES.md  TESTING_STRATEGY.md  UI_MIGRATION_SUMMARY.md  UI_STRUCTURE.md  WARNINGS_SUMMARY.md  book.toml  multimodal-config.md
docs/FIXES_SUMMARY/: keyword_fixes_summary.md
docs/api/: README.md  rest-endpoints.md  websocket.md
docs/guides/: deployment.md  getting-started.md  templates.md
docs/platform/: DEV.md
docs/reference/: architecture.md  basic-language.md  configuration.md
docs/src/: README.md  SUMMARY.md  TODO.txt  custom.css  executive-vision.md  glossary.md  introduction.md  theme-sync.js
examples/: customer-support-workflow.bas  order-checker-tool.bas  simple-chatbot.bas  test_cron.rs
gbapp/: MESSAGE_TYPES.md
migrations/: 6.0.0.sql  6.0.10.sql  6.0.4.sql  6.0.5.sql  6.0.6.sql  6.0.7.sql  6.0.8.sql  6.0.9.sql
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/00000000000001_consolidated/: down.sql  up.sql
migrations/2025-01-20-000001_multi_agent_bots/: down.sql  up.sql
migrations/20250101000000_consolidated_schema/: down.sql  up.sql
migrations/20250114000001_add_stone_product_fields/: down.sql  up.sql
migrations/20250803000001_add_invitation_tables/: up.sql
migrations/2026-01-25-091800_workflow_orchestration/: up.sql
migrations/6.0.0-01-core/: up.sql
migrations/6.0.0_initial_schema/: down.sql  up.sql
migrations/6.0.1_bot_memories/: down.sql
migrations/6.0.2_kb_tools/: down.sql
migrations/6.0.3_kb_session_tables/: down.sql  up.sql
migrations/6.0.4_config_management/: down.sql
migrations/6.0.5_automation_updates/: down.sql  up.sql
migrations/6.0.6_user_accounts/: down.sql  up.sql
migrations/6.0.7_session_kb_tracking/: down.sql  up.sql
migrations/6.0.8_directory_integration/: down.sql  up.sql
migrations/6.0.9_website_support/: down.sql  up.sql
migrations/6.1.0_enterprise_suite/: down.sql  up.sql
migrations/6.1.0_table_keyword/: down.sql  up.sql
migrations/6.1.1_autotask_system/: down.sql  up.sql
migrations/6.1.1_fix_config_id_types/: down.sql  up.sql
migrations/6.1.1_multi_agent_memory/: down.sql  up.sql
migrations/6.1.2_connected_accounts/: down.sql  up.sql
migrations/6.1.2_phase3_phase4/: down.sql  up.sql
migrations/6.1.2_table_role_access/: down.sql  up.sql
migrations/6.1.3_bot_hierarchy_monitors/: down.sql  up.sql
migrations/6.1.3_knowledge_base_sources/: down.sql  up.sql
migrations/6.2.0_suite_apps/: down.sql  up.sql
migrations/6.2.1_email_tracking/: down.sql  up.sql
migrations/6.2.3-crm-deals/: up.sql
migrations/6.2.5-crm-department-sla/: up.sql
migrations/7.0.0_billion_scale_redesign/: down.sql  up.sql
prompts/dev/: svg-diagram-style-guide.md
scripts/: deploy-embedded.sh  install-dependencies.sh  setup-tls.sh
scripts/utils/: fix-collabora-repo.sh  set-limits.sh
src/: api_router.rs  create_bucket.rs  embedded_ui.rs  lib.rs  main.rs  main.test.rs
src/analytics/: goals.rs  goals_ui.rs  insights.rs  mod.rs
src/api/: drive.rs  editor.rs  keyword_services.rs  mod.rs  terminal.rs
src/attendance/: drive.rs  keyword_services.rs  llm_assist.rs  llm_assist_config.rs  mod.rs  queue.rs
src/attendant/: mod.rs  ui.rs
src/auth/: auth.test.rs  auth_test.rs  facade.rs  groups.rs  mod.rs  users.rs  zitadel.rs
src/auto_task/: APP_GENERATOR_PROMPT.md  agent_executor.rs  app_generator.rs  app_logs.rs  ask_later.rs  auto_task.rs  autotask_api.rs  container_session.rs  designer_ai.rs  intent_classifier.rs  intent_compiler.rs  mod.rs  orchestrator.rs  safety_layer.rs  task_manifest.rs
src/automation/: automation.test.rs  compact_prompt.rs  mod.rs  vectordb_indexer.rs
src/basic/: basic.test.rs  mod.rs
src/billing/: alerts.rs  api.rs  billing_ui.rs  invoice.rs  lifecycle.rs  meters.rs  middleware.rs  mod.rs  quotas.rs  testing.rs
src/bootstrap/: bootstrap.test.rs  mod.rs
src/bot/: bot.test.rs  mod.rs  multimedia.rs  ui.rs
src/botmodels/: insightface.rs  mod.rs  opencv.rs  python_bridge.rs  rekognition.rs
src/browser/: api.rs
src/calendar/: caldav.rs  mod.rs  ui.rs
src/calendar_engine/: mod.rs
src/canvas/: mod.rs  ui.rs
src/kb/: mod.rs  (+2 more)
templates/: MASTER_KEYWORDS_INDEX.md  README.md  TEMPLATE_PLAN.md  base.html  chat.html  drive.html  home.html  mail.html  meet.html  tasks.html  tools.html
tests/: semantic_cache_test.rs  websocket_test.html
ui/: index.html
web/: index.html
(+1285 files in other folders)
