[package]
name = "botserver"
version = "6.1.0"
edition = "2021"
resolver = "2"

[dependencies.botlib]
path = "../botlib"
features = ["database", "i18n"]

[features]
# ===== SINGLE DEFAULT FEATURE SET =====
default = ["chat", "drive", "tasks", "automation", "cache", "directory"]

# ===== COMMUNICATION APPS =====
chat = []
people = []
mail = ["dep:lettre","dep:mailparse", "dep:imap", "dep:native-tls"]
meet = ["dep:livekit"]
social = []
whatsapp = []
telegram = []
instagram = []
msteams = []
communications = ["chat", "people", "mail", "meet", "social", "whatsapp", "telegram", "instagram", "msteams", "cache"]

# ===== PRODUCTIVITY APPS =====
calendar = []
tasks = ["dep:cron", "automation"]
project=["quick-xml"]
goals = []
workspace = []
workspaces = ["workspace"]
tickets = []
billing = []
productivity = ["calendar", "tasks", "project", "goals", "workspaces", "cache"]

# ===== DOCUMENT APPS =====
paper = ["docs", "dep:pdf-extract"]
docs = ["docx-rs", "ooxmlsdk"]
sheet = ["calamine", "spreadsheet-ods"]
slides = ["ooxmlsdk"]
drive = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-smithy-async", "dep:pdf-extract"]
documents = ["paper", "docs", "sheet", "slides", "drive"]

# ===== MEDIA APPS =====
video = []
player = []
canvas = []
media = ["video", "player", "canvas"]

# ===== LEARNING & RESEARCH APPS =====
learn = []
research = ["llm", "vectordb"]
sources = []
learning = ["learn", "research", "sources"]

# ===== ANALYTICS APPS =====
analytics = []
dashboards = []
monitoring = ["dep:sysinfo"]
analytics_suite = ["analytics", "dashboards", "monitoring"]

# ===== DEVELOPMENT TOOLS =====
designer = []
editor = []
automation = ["dep:rhai", "dep:cron"]
development = ["designer", "editor", "automation"]

# ===== ADMIN APPS =====
attendant = []
security = []
settings = []
admin = ["attendant", "security", "settings"]

# ===== CORE TECHNOLOGIES =====
llm = []
vectordb = ["dep:qdrant-client"]
nvidia = []
cache = ["dep:redis"]
compliance = ["dep:csv"]
timeseries = []
weba = []
directory = []
progress-bars = ["dep:indicatif"]
grpc = []
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
console = ["dep:crossterm", "dep:ratatui", "monitoring"]

# ===== BUNDLE FEATURES =====
full = [
    "chat", "people", "mail",
    "tasks", "calendar",
    "drive", "docs",
    "llm", "cache", "compliance"
]

minimal = ["chat"]
lightweight = ["chat", "drive", "tasks", "people"]

[dependencies]
diesel_migrations = "2.1"
bigdecimal = { version = "0.4", features = ["serde"] }
# === CORE RUNTIME ===
aes-gcm = "0.10"
anyhow = "1.0"
argon2 = "0.5"
async-lock = "2.8.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7.5", features = ["ws", "multipart", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
bytes = "1.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
color-eyre = "0.6.5"
diesel = { version = "2.1", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2", "numeric"] }
dirs = "5.0"
dotenvy = "0.15"
env_logger = "0.11"
futures = "0.3"
futures-util = { version = "0.3", default-features = false }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
hex = "0.4"
hmac = "0.12.1"
hyper = { version = "1.4", default-features = false, features = ["client", "server", "http1", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http2"] }
log = "0.4"
num-format = "0.4"
once_cell = "1.18.0"
rand = "0.9.2"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "multipart", "stream", "json"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = "1.0"
toml = "0.8"
sha2 = "0.10.9"
sha1 = "0.10.6"
tokio = { version = "1.41", default-features = false, features = ["full", "process", "process"] }
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.5", default-features = false, features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }
urlencoding = "2.1"
uuid = { version = "1.11", default-features = false, features = ["v4", "v5"] }

# === TLS/SECURITY DEPENDENCIES ===
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
tokio-rustls = "0.26"
rcgen = { version = "0.14", default-features = false, features = ["crypto", "ring", "pem"] }  # Added ring and pem features
x509-parser = "0.15"
rustls-native-certs = "0.8"
webpki-roots = "0.25"
ring = "0.17"
ciborium = "0.2"
time = { version = "0.3", default-features = false, features = ["formatting"] }
jsonwebtoken = "9.3"
tower-cookies = "0.10"

# === APP-SPECIFIC DEPENDENCIES ===

# mail Integration (mail feature)
imap = { version = "3.0.0-alpha.15", optional = true }
lettre = { version = "0.11", features = ["smtp-transport", "builder"], optional = true }
mailparse = { version = "0.15", optional = true }
native-tls = { version = "0.2", optional = true }

# Video Meetings (meet feature)
livekit = { version = "0.7", optional = true }

# Vector Database (vectordb feature)
qdrant-client = { version = "1.12", optional = true }

# Document Processing
docx-rs = { version = "0.4", optional = true }
ooxmlsdk = { version = "0.3", default-features = false, optional = true }
calamine = { version = "0.26", optional = true }
spreadsheet-ods = { version = "1.0", optional = true }

# File Storage & Drive (drive feature)
aws-config = { version = "1.8.8", default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"], optional = true }
aws-sdk-s3 = { version = "1.109.0", default-features = false, features = ["rt-tokio", "rustls"], optional = true }
aws-smithy-async = { version = "1.2", features = ["rt-tokio"], optional = true }
pdf-extract = { version = "0.10.0", optional = true }
quick-xml = { version = "0.37", optional=true, features = ["serialize"] }
flate2 = { version = "1.0", optional = false }
zip = { version = "2.2", optional = false }
tar = { version = "0.4", optional = false }

# Task Management (tasks feature)
cron = { version = "0.15.0", optional = true }

# Automation & Scripting (automation feature)
rhai = { version = "1.23", features = ["sync"], optional = true }

# Compliance & Reporting (compliance feature)
csv = { version = "1.3", optional = true }

# Console/TUI (console feature)
crossterm = { version = "0.29.0", optional = true }
ratatui = { version = "0.29", optional = true }

# QR Code Generation
png = "0.18"
qrcode = { version = "0.14", default-features = false }

# Error handling
thiserror = "2.0"

# Caching/Sessions (cache feature)
redis = { version = "0.27", default-features = false, features = ["tokio-comp"], optional = true }

# System Monitoring (monitoring feature)
sysinfo = { version = "0.37.2", optional = true }

# Networking/gRPC (grpc feature)
tonic = { version = "0.14.2", default-features = false, features = ["transport"], optional = true }

# UI Enhancement (progress-bars feature)
indicatif = { version = "0.18.0", optional = true }
smartstring = "1.0.1"

# Memory allocator (jemalloc feature)
tikv-jemallocator = { version = "0.6", optional = true }
tikv-jemalloc-ctl = { version = "0.6", default-features = false, optional = true }
scopeguard = "1.2.0"

# Vault secrets management
vaultrs = "0.7"

# Calendar standards (RFC 5545)
icalendar = "0.17"

# Layered configuration
figment = { version = "0.10", default-features = false, features = ["toml"] }

# Rate limiting
governor = "0.10"

# RSS feed parsing
rss = "2.0"

# HTML parsing/web scraping
scraper = "0.25"
walkdir = "2.5.0"

# Embedded static files
rust-embed = "8.5"
mime_guess = "2.0"
hyper-util = { version = "0.1.19", default-features = false, features = ["client-legacy"] }
http-body-util = "0.1.3"

[dev-dependencies]
mockito = "1.7.0"
tempfile = "3"

bigdecimal = { version = "0.4", features = ["serde"] }
